# PenRed

./: .readthedocs.yaml  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSES2  README.md  codemeta.json
src/: .directory  CMakeLists.txt  compile.bat  compile.sh  installPyPenred.bat  installPyPenred.sh
src/VR/: CMakeLists.txt
src/VR/generic/includes/: VRRussianRoulette.hh  VRradialSplitting.hh  VRsplitting.hh  genericVR.hh
src/VR/generic/source/: VRRussianRoulette.cpp  VRradialSplitting.cpp  VRsplitting.cpp  genericVR.cpp
src/VR/includes/: pen_vr.hh
src/VR/source/: pen_vr.cpp
src/VR/specific/includes/: VRxraySplitting.hh  specificVR.hh
src/VR/specific/source/: VRxraySplitting.cpp  specificVR.cpp
src/bindings/C/: CMakeLists.txt
src/bindings/C/LB/: CMakeLists.txt  server_wraper.cpp
src/bindings/C/viewers/: CMakeLists.txt
src/bindings/python/LB/: RUPER_LB.py  client.py  clientCert.py  server.py  test_1.py
src/bindings/python/modules/: CMakeLists.txt  psf.cpp  simulator.cpp
src/bindings/python/pyPenred/: README.md  setup.py
src/bindings/python/simulator/: CMakeLists.txt  simulator.cpp
src/compiled/geometry/voxels/: geo2voxel
src/compiled/mains/penmain/: box  config.in  context.rep  cylinder  glass  log  pen_main  phantomView  report.geo
src/compiled/penMats/: SoftTissue.mat  range  readMat
src/compiled/psf/: psf2ascii  psfSpect
src/compiled/registers/: regGeometries  regSamplers  regTallies
src/compiled/tests/DICOM/: dicom_t1  dicom_t2
src/compiled/tests/dump/: dump_t1
src/compiled/tests/internalData/: internalData_t1  internalData_t2
src/compiled/tests/particleGenerators/: config.in  generalSampling_t1
src/compiled/tests/psf/: psf_t1  psf_t2
src/compiled/tests/sharedFile/: shared_t1
src/compiled/tests/splittedFiles/: split_t1
src/config/errors/: emess.h  init.err  mat.err
src/geometry/: CMakeLists.txt
src/geometry/includes/: geometry_classes.hh  pen_geometries.hh  pen_geometry_register.hh
src/geometry/meshes/includes/: DICOM_geo.hh  pen_mesh_geos.hh  voxel_geo.hh
src/geometry/meshes/source/: DICOM_geo.cpp  DICOM_geo.hh  pen_mesh_geos.cpp  voxel_geo.cpp
src/geometry/objects/includes/: combo_geo.hh  dummy_geo.hh  filter_geo.hh  meshBody_geo.hh  pen_object_geos.hh  quadric_geo.hh
src/geometry/objects/source/: combo_geo.cpp  dummy_geo.cpp  filter_geo.cpp  meshBody_geo.cpp  pen_object_geos.cpp  quadric_geo.cpp
src/geometry/source/: pen_geometries.cpp  pen_geometry_register.cpp
src/kernel/: CMakeLists.txt
src/kernel/contextParticles/: base.hh  contexts.hh  penelope.hh
src/kernel/dataBases/: CMakeLists.txt  dataBasesCommon.cpp  dataBasesCommon.hh
src/kernel/errors/: eenum.h  pen_errors.cpp  pen_errors.hh
src/kernel/grids/source/: pen_grid.cpp  (+1 more)
src/kernel/includes/: PenRed.hh  math_classes.hh  pen_classes.hh  pen_constants.hh
src/kernel/logger/: CMakeLists.txt  logger.cpp  logger.hh
src/kernel/materials/: CMakeLists.txt
src/kernel/parsers/: CMakeLists.txt
src/kernel/states/: gammaPol_state.hh  pen_baseState.hh  pen_states.hh
src/kernel/timer/: pen_timer.cpp  pen_timer.hh
src/lib/: CMakeLists.txt
src/lib/auxiliar/: CMakeLists.txt
src/lib/dump/: CMakeLists.txt
src/lib/image/: CMakeLists.txt
src/lib/instantiator/: instantiator.hh
src/lib/loadBalance/: CMakeLists.txt  README.md  loadBalance.cpp  loadBalance.hh
src/lib/math/: CMakeLists.txt
src/lib/parameters/: CMakeLists.txt
src/lib/psf/: CMakeLists.txt
src/lib/sharedFile/: CMakeLists.txt
src/lib/simulation/: CMakeLists.txt
src/lib/splittedFile/: CMakeLists.txt
src/lib/tcp/: CMakeLists.txt  tcp_cs.cpp  tcp_cs.hh
src/lib/x-ray/: CMakeLists.txt
src/mains/: CMakeLists.txt
src/mains/includes/: .directory  pen_loops.hh
src/mains/source/: .directory  pen_main.cpp  pen_main.cpp~  penred.cpp
src/particleGen/: CMakeLists.txt
src/particleGen/includes/: pen_samplers.hh
src/particleGen/source/: pen_samplers.cpp
src/tallies/: CMakeLists.txt
src/tallies/includes/: pen_tallies.hh
src/tallies/source/: pen_tallies.cpp
src/tests/: CMakeLists.txt
src/tests/DICOM/: config.in  plotContourImage.gplot  plotDicom2Voxel.gplot  plotImage.gplot  test_dicom.cpp  test_dicom2voxel.cpp
src/tests/LB/: test.py  testResume.py
src/tests/dump/: dumpTest.cpp
src/tests/geometry/: CMakeLists.txt
src/tests/internalData/: readTest1.cpp  test1.cpp  test2.cpp
src/tests/measurements/: CMakeLists.txt  test1.cpp
src/tests/psf/: multithreadRead.cpp  writeRead.cpp
src/tests/sampler/: CMakeLists.txt  test0.cpp  test1.cpp
src/tests/sharedFile/: test1.cpp
src/tests/splittedFiles/: split_t1.cpp
src/tests/stateSampler/: .directory  config.in  generalSampling.cpp
src/utilities/: CMakeLists.txt
src/utilities/Blender/: geoBuilder-3.6.9-LTS.py  geoBuilder.py  pen_quadrics.py
src/utilities/DICOM/: config.in  kernels.cpp
src/utilities/LB/: LBserver.cpp  stdinServer.cpp
src/utilities/compositions/: CMakeLists.txt  compositionDB.cpp
src/utilities/contexts/: CMakeLists.txt  penContextInfo.cpp
src/utilities/errors/: createErrors.cpp
src/utilities/geometry/: MCtables.hh  geo2simpleMesh.cpp  geo2voxel.cpp  palette.hh
src/utilities/iaeaPsf/: iaea2PenRed.cpp  iaea_config.h  iaea_header.cpp  iaea_header.h  iaea_phsp.cpp  iaea_phsp.h  iaea_record.cpp  penRed2iaea.cpp  utilities.cpp  utilities.h
src/utilities/internalData/: CMakeLists.txt  internalData2YAML.cpp
src/utilities/measurements/: CMakeLists.txt  profile.cpp  toMatrix.cpp
src/utilities/mutren/: mutren.cpp  mutrenSpectrum.cpp
src/utilities/penMats/: CMakeLists.txt  createListedMat.cpp  createMat.cpp  range.cpp  readMat.cpp
src/utilities/psampler/: psampler.cpp
src/utilities/psf/: psf2ascii.cpp  psf_spectre.cpp
src/utilities/registers/: registeredGenericVR.cpp  registeredGeometries.cpp  registeredPhotonVR.cpp  registeredSamplers.cpp  registeredTallies.cpp
src/utilities/viewers/: CMakeLists.txt
src/utilities/x-ray/: CMakeLists.txt  createAnode.cpp  createBaseCollimator.cpp  createBaseFilter.cpp  createDevice.cpp  simAnode.cpp  simDevice.cpp  spectrumEstimation.cpp  x-ray.cpp
(+1359 files in other folders)
